# task-manager

./: .eslintrc.json  .gitignore  CROSS-FEATURE-GUIDE.md  IMPLEMENTATION_SUMMARY.md  INLINE_EDITING_IMPROVEMENTS.md  PROJECT_ROUTING_PROPOSAL.md  QUICK_START.md  README.md  REVIEW-QUEUE-CONSOLIDATION.md  SETUP_VERIFICATION.md  TASKS.md  TASK_28_10_PROGRESS.md  VIEW_MODE_TROUBLESHOOTING.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tms-design-preview.html  vitest.config.ts  vitest.setup.ts
app/: globals.css  globals.test.ts  layout.tsx  page.completion-cascade.test.tsx  page.tsx  quill-custom.css
components/: AF4View.tsx  ActiveTabIndicator.tsx  Breadcrumb.test.tsx  Breadcrumb.tsx  DITView.test.tsx  DITView.tsx  DependencyDialog.tsx  DependencyList.tsx  EmptyState.tsx  ErrorBoundary.tsx  FVPView.tsx  FilterPanel.tsx  GlobalTasksContainer.tsx  GlobalTasksHeader.tsx  GlobalTasksView.tsx  ImportExportMenu.tsx  InlineEditable.tsx  LandingEmptyState.test.tsx  LandingEmptyState.tsx  Layout.tsx  ProjectList.test.tsx  ProjectList.tsx  ProjectOverview.tsx  ProjectTabs.tsx  ReadOnlyBanner.tsx  RichTextEditor.tsx  SearchBar.tsx  SearchInput.test.tsx  SearchInput.tsx  SectionManager.tsx  ShareButton.tsx  SharedStateDialog.tsx  SkeletonProjectList.test.tsx  SkeletonProjectList.tsx  SkeletonTaskList.test.tsx  SkeletonTaskList.tsx  TMSSelector.tsx  TabSyncProvider.test.tsx  TabSyncProvider.tsx  TaskBoard.test.tsx  (+13 more)
e2e/: af4-workflow.spec.ts  all-tasks-controls.spec.ts  (+24 more)
mcp-server/: __init__.py  __main__.py  pyproject.toml  server.py
(+584 files in other folders)
